Adding random partilce test

--- a/GalaxyCollider.html
+++ b/GalaxyCollider.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Lab07</title>
+    <title>Galaxy Collider</title>
     <script src="Libs/three.min.js"></script> 
     <script src="Libs/dat.gui.min.js"></script>
     <script src="Libs/stats.min.js"></script>
